--- a/ttt.html
+++ b/ttt.html
@@ -22,19 +22,19 @@
 	
 	  <table>
 	                <tr>
-	                  <td><button id="btn1"><img width='140px' hieght='140px' src="blank.gif"></button></td>
-	                  <td><button id="btn2"><img width='140px' hieght='140px' src="blank.gif"></button></td>
-	                  <td><button id="btn3"><img width='140px' hieght='140px' src="blank.gif"></button></td>
+	                  <td><button id="btn1"><img width='50px' hieght='50px' src="blank.png"></button></td>
+	                  <td><button id="btn2"><img width='50px' hieght='50px' src="blank.png"></button></td>
+	                  <td><button id="btn3"><img width='50px' hieght='50px' src="blank.png"></button></td>
 	                </tr>
 	                <tr>
-	                  <td><button id="btn4"><img width='140px' hieght='140px' src="blank.gif"></button></td>
-	                  <td><button id="btn5"><img width='140px' hieght='140px' src="blank.gif"></button></td>
-	                  <td><button id="btn6"><img width='140px' hieght='140px' src="blank.gif"></button></td>
+	                  <td><button id="btn4"><img width='50px' hieght='50px' src="blank.png"></button></td>
+	                  <td><button id="btn5"><img width='50px' hieght='50px' src="blank.png"></button></td>
+	                  <td><button id="btn6"><img width='50px' hieght='50px' src="blank.png"></button></td>
 	                </tr>
 	                <tr>
-	                  <td><button id="btn7"><img width='140px' hieght='140px' src="blank.gif"></button></td>
-	                  <td><button id="btn8"><img width='140px' hieght='140px' src="blank.gif"></button></td>
-	                  <td><button id="btn9"><img width='140px' hieght='140px' src="blank.gif"></button></td>
+	                  <td><button id="btn7"><img width='50px' hieght='50px' src="blank.png"></button></td>
+	                  <td><button id="btn8"><img width='50px' hieght='50px' src="blank.png"></button></td>
+	                  <td><button id="btn9"><img width='50px' hieght='50px' src="blank.png"></button></td>
 	                </tr>
 	              
 	            </table>
